--- a/eureka-server.properties
+++ b/eureka-server.properties
@@ -1,6 +1,7 @@
-#server.port=9102
+server.port=9102
 eureka.client.serviceUrl.defaultZone=http://localhost:9102/eureka/
 eureka.client.registerWithEureka=false
+
 
 eureka.client.fetchRegistry=false
 
