--- a/microservice-produits.properties
+++ b/microservice-produits.properties
@@ -18,3 +18,7 @@ mes-configs.limitDeProduits= 2
 #eureka
 eureka.client.serviceUrl.defaultZone=http://localhost:9102/eureka/
 
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+spring.application.name=produit-service
+
