--- a/microservice-produits.properties
+++ b/microservice-produits.properties
@@ -16,4 +16,4 @@ spring.jpa.hibernate.ddl-auto=none
 mes-configs.limitDeProduits= 2
 
 #eureka
-eureka.client.serviceUrl.defaultZone: http://localhost:9102/eureka/
+eureka.client.serviceUrl.defaultZone=http://localhost:9102/eureka/
