--- a/microservice-produits.properties
+++ b/microservice-produits.properties
@@ -20,4 +20,5 @@ eureka.client.serviceUrl.defaultZone=http://localhost:9102/eureka/
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 
-
+#Ribbon
+microservice-produits.ribbon.listOfServers=localhost:9001,localhost:9011
