--- a/clientui.properties
+++ b/clientui.properties
@@ -2,6 +2,8 @@ server.port 8080
 
 #Eureka
 eureka.client.serviceUrl.defaultZone: http://localhost:9102/eureka/
+eureka.client.registerWithEureka=true
 
+eureka.client.fetchRegistry=true
 #Ribbon
 microservice-produits.ribbon.listOfServers=localhost:9001,localhost:9011
