--- a/clientui.properties
+++ b/clientui.properties
@@ -1,7 +1,7 @@
 server.port 8080
 
 #Eureka
-eureka.client.serviceUrl.defaultZone: http://localhost:9102/eureka/
+eureka.client.serviceUrl.defaultZone= http://localhost:9102/eureka/
 eureka.client.registerWithEureka=true
 
 eureka.client.fetchRegistry=true
