--- a/clientui.properties
+++ b/clientui.properties
@@ -4,3 +4,11 @@ server.port 8080
 eureka.client.serviceUrl.defaultZone= http://localhost:9102/eureka/
 eureka.client.registerWithEureka=true
 
+
+
+spring.cloud.config.import-check.enabled=false
+#Ribbon
+
+ 
+
+microservice-produits.ribbon.listOfServers=localhost:9001,localhost:9011
