--- a/clientui.properties
+++ b/clientui.properties
@@ -1,14 +1,16 @@
+
 server.port 8080
 
 #Eureka
 eureka.client.serviceUrl.defaultZone= http://localhost:9102/eureka/
 eureka.client.registerWithEureka=true
+eureka.client.fetchRegistry=true
 
-
-
+spring.cloud.compatibility-verifier.enabled=false
 spring.cloud.config.import-check.enabled=false
+spring.cloud.config.enabled=false
 #Ribbon
 
- 
+
 
 microservice-produits.ribbon.listOfServers=localhost:9001,localhost:9011
