--- a/clientui.properties
+++ b/clientui.properties
@@ -7,10 +7,14 @@ eureka.client.registerWithEureka=true
 eureka.client.fetchRegistry=true
 
 spring.cloud.compatibility-verifier.enabled=false
-spring.cloud.config.import-check.enabled=false
-spring.cloud.config.enabled=false
+#spring.cloud.config.import-check.enabled=false
+#spring.cloud.config.enabled=false
+
 #Ribbon
-
-
-
 microservice-produits.ribbon.listOfServers=localhost:9001,localhost:9011
+
+
+
+
+spring.cloud.config.enabled=true  
+spring.cloud.config.import-check.enabled=true
