--- a/clientui.properties
+++ b/clientui.properties
@@ -1,6 +1,6 @@
 
 server.port 8080
-
+spring.config.import=configserver:http://localhost:9101
 #Eureka
 eureka.client.serviceUrl.defaultZone= http://localhost:9102/eureka/
 eureka.client.registerWithEureka=true
