--- a/clientui.properties
+++ b/clientui.properties
@@ -16,5 +16,5 @@ microservice-produits.ribbon.listOfServers=localhost:9001,localhost:9011
 
 
 
-spring.cloud.config.enabled=true  
-spring.cloud.config.import-check.enabled=true
+#spring.cloud.config.enabled=true  
+#spring.cloud.config.import-check.enabled=true
