--- a/clientui.properties
+++ b/clientui.properties
@@ -6,7 +6,7 @@ eureka.client.serviceUrl.defaultZone= http://localhost:9102/eureka/
 eureka.client.registerWithEureka=true
 eureka.client.fetchRegistry=true
 
-spring.cloud.compatibility-verifier.enabled=false
+#spring.cloud.compatibility-verifier.enabled=false
 #spring.cloud.config.import-check.enabled=false
 #spring.cloud.config.enabled=false
 
