--- a/clientui.properties
+++ b/clientui.properties
@@ -11,7 +11,7 @@ eureka.client.fetchRegistry=true
 #spring.cloud.config.enabled=false
 
 #Ribbon
-microservice-produits.ribbon.listOfServers=localhost:9001,localhost:9011
+#microservice-produits.ribbon.listOfServers=localhost:9001,localhost:9011
 
 
 
